--- a/production.yml
+++ b/production.yml
@@ -2,7 +2,7 @@
 version: '3'
 services:
   live:
-    image: joaoraf/freqtrade:master
+    image: redtreetops/freqtrade-1:master
     env_file: 
       - .env
     restart: unless-stopped
